fixed layout issue

--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -61,3 +61,7 @@ body {
   margin: auto;
 
 }
+
+.text-white{
+  font-size: 12px;
+}
